# online_school

./: .env.exemple  .flake8  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
education/: apps.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/management/commands/: payment_exemple.py
education/migrations/: 0001_initial.py  0002_course_owner_lesson_owner_payment.py  0003_updatesubscriptioncourse.py  0004_alter_payment_options_remove_payment_content_pay_and_more.py
nginx/: Dockerfile  nginx.conf
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  payment_exemple.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_delete_payment.py
